# os-rust

./: Cargo.toml  x86_64-blog_os.json
.cargo/: config
src/: .main.rs.swp  main.rs
