[package]
name = "blog_os"
version = "0.1.0"
authors = ["sepiropht <sergembotta@mailoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
